[package]
name                    = "learning-progress-bar"
description             = "A progress bar that uses statistics."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "GPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/learning-progress-bar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-process = "1.3.0"
# async-stream = "0.3.3"
# async-trait = "0.1.41"
