[package]
name                    = "learning-progress-bar"
description             = "A progress bar that uses statistics."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "GPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/learning-progress-bar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel           = "1.6.1"
async-trait             = "0.1.41"
displaydoc              = { git = "https://github.com/yaahc/displaydoc", rev = "7159bb5c9d41ca3c7ccf04ae86ae3acb0ea12a27" }
super-process           = { git = "https://github.com/cosmicexplorer/super-process", rev = "fccb478aa3cdb5c1851387c24a4b642e593a2034" }
# super-process           = { path = "/home/cosmicexplorer/tools/super-process" }
thiserror               = "1.0.30"
tokio                   = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test              = "0.4.2"
