[package]
name                    = "learning-progress-bar"
description             = "A progress bar that uses statistics."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "GPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/learning-progress-bar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
clap = { version = "3", features = ["derive"] }
rand = "0.7"
runtime-inference = { path = "./runtime-inference" }
super-process           = { git = "https://github.com/cosmicexplorer/super-process", rev = "a0b90583b06e9043d62994330e273ee1f16d6e42" }
tokio = { version = "1", features = ["full"] }

[workspace]
resolver = "2"
members = [
  ".",
  "runtime-inference",
]
default-members = [
  ".",
  "runtime-inference",
]
