[package]
name                    = "runtime-inference"
description             = "Library component of `learning-progress-bar`."
authors                 = ["Danny McClanahan <dmcC2@hypnicjerk.ai>"]
license                 = "GPL-3.0-or-later"
repository              = "https://github.com/cosmicexplorer/learning-progress-bar"
version                 = "0.0.0"
edition                 = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel           = "1.7.1"
async-trait             = "0.1.41"
displaydoc              = { git = "https://github.com/yaahc/displaydoc", rev = "7159bb5c9d41ca3c7ccf04ae86ae3acb0ea12a27" }
indexmap                = "1.9.0"
super-process           = { git = "https://github.com/cosmicexplorer/super-process", rev = "a0b90583b06e9043d62994330e273ee1f16d6e42" }
# super-process           = { path = "/home/cosmicexplorer/tools/super-process" }
thiserror               = "1.0.30"
tokio                   = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test              = "0.4.2"
