[package]
name = "terminal-wrapper"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["thrift-ffi"]
cffi-compatible = ["thrift-ffi/cffi-compatible"]
pants-injected = []

[dependencies]
connect = { path = "../zipkin/connect" }
coroutines = { path = "../coroutines" }
lazy_static = "1"
regex = "1"
thrift = "0.13.0"
thrift-ffi = { path = "../thrift-ffi", optional = true }
zipkin = { path = "../zipkin" }

[build-dependencies]
cbindgen-cffi-compat = { path = "../thrift-ffi/cbindgen-cffi-compat" }
