[package]
name = "thrift-ffi"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
cffi-compatible = []
pants-injected = []

[dependencies]
coroutines = { path = "../coroutines" }
itertools = "0.8.2"
lazy_static = "1"
# macros = { path = "macros" }
parking_lot = "0.10.0"
# thrift = "0.14.0"
thrift = { path = "/Users/dmcclanahan/tools/thrift/lib/rs" }
tracing = "0.1"
tracing-subscriber = "0.2.0-alpha.4"
zipkin = { path = "../zipkin" }

[build-dependencies]
cbindgen-cffi-compat = { path = "cbindgen-cffi-compat" }

# [patch.crates-io]
# thrift = { path = "/Users/dmcclanahan/tools/thrift/lib/rs" }
