[package]
name = "thrift_ffi"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1"
parking_lot = "0.6"
thrift = "0.13.0"

[build-dependencies]
cbindgen = "0.12.1"
walkdir = "2"
