[package]
name = "thrift_ffi"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
cffi_compatible = []
pants-injected = []

[dependencies]
lazy_static = "1"
parking_lot = "0.6"
thrift = "0.13.0"

[build-dependencies]
cffi_compat = { path = "cffi_compat" }
