[package]
name = "zipkin"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
parking_lot = "0.6"
regex = "1.3.3"
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "0.8.1", features = ["v4"] }
