[package]
name = "zipkin"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connect = { path = "../zipkin/connect" }
coroutines = { path = "../coroutines" }
entities = { path = "../zipkin/entities" }
futures = "0.3.1"
lazy_static = "1"
parking_lot = "0.10.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2.0-alpha.4"

[build-dependencies]
cbindgen-cffi-compat = { path = "../thrift-ffi/cbindgen-cffi-compat", optional = true }
# cbindgen-cffi-compat = { path = "thrift-ffi/cbindgen-cffi-compat", optional = true }
