[package]
name = "entities"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1.7"
lazy_static = "1"
regex = "1.3.3"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4"] }
coroutines = { path = "../../coroutines" }
# coroutines = { path = "coroutines" }
